# dove

./: .gitignore  .travis.yml  Cargo.toml  README.md
.github/workflows/: ci.yaml
examples/: driver.rs  receive.rs  rustls.rs  send.rs  send_framing.rs  send_minimal.rs  tls.rs
src/: client.rs  conn.rs  connection.rs  container.rs  convert.rs  core.rs  decoding.rs  driver.rs  encoding.rs  error.rs  frame_codec.rs  framing.rs  lib.rs  message.rs  options.rs  sasl.rs  stream.rs  symbol.rs  transport.rs  types.rs  url.rs
tests/: integration_tests.rs
tests/qpid-broker-j/: initial-config.json
