# 
# Copyright 2019, Ulf Lilleengen
# License: Apache License 2.0 (see the file LICENSE or http://apache.org/licenses/LICENSE-2.0.html).
#
[package]
name = "dove"
version = "0.1.1"
authors = ["Ulf Lilleengen <ulf.lilleengen@gmail.com>"]
edition = "2018"
description = "Dove is an open source Rust implementation of the AMQP 1.0 OASIS standard (http://www.amqp.org/)."
license = "Apache-2.0"
include = ["README.md", "LICENSE", "src/*.rs", "tests/*.rs", "examples/*.rs"]
repository = "https://github.com/lulf/dove/"

[dependencies]
byteorder = "1.3.2"
mio = { version = "0.7", features = ["tcp", "os-poll"] }
uuid = { version = "0.7.4", features = ["v4"] }
rand = "0.7.3"
log = "0.4.11"

[dev-dependencies]
futures = "0.3.6"
env_logger = "0.8.2"
testcontainers = "0.11.0"
reqwest = { version = "0.10", features = ["blocking"] }
