# 
# Copyright 2019, Ulf Lilleengen
# License: Apache License 2.0 (see the file LICENSE or http://apache.org/licenses/LICENSE-2.0.html).
#
[package]
name = "dove"
version = "0.1.2"
authors = ["Ulf Lilleengen <ulf.lilleengen@gmail.com>", "Michael Watzko <michael@watzko.de>"]
edition = "2018"
description = "Dove is an open source Rust implementation of the AMQP 1.0 OASIS standard (http://www.amqp.org/)."
license = "Apache-2.0"
include = ["README.md", "LICENSE", "src/*.rs", "tests/*.rs", "examples/*.rs"]
repository = "https://github.com/lulf/dove/"

[dependencies]
byteorder = "1.4"
mio = { version = "0.7", features = ["tcp", "os-poll"] }
uuid = { version = "0.8", features = ["v4"] }
rand = "0.8"
log = "0.4"
async-channel = "1.6.1"

[dev-dependencies]
futures = "0.3"
tokio = { version = "1", features = ["full"] }
env_logger = "0.8"
testcontainers = "0.12"
reqwest = { version = "0.11" }
